--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -84,8 +84,16 @@ const lang = getLangFromUrl(Astro.url);
       background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%23000' stroke-width='0.01' opacity='0.003'%3E%3Cpath d='M0 0v16M16 0v16M0 0h16M0 16h16'/%3E%3C/g%3E%3C/svg%3E");
       background-size: 16px 16px;
       /* Simplifier le masque pour une meilleure performance */
-      mask: linear-gradient(to bottom, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0) 70%);
-      -webkit-mask: linear-gradient(to bottom, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0) 70%);
+      mask: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.03) 0%,
+        rgba(0, 0, 0, 0) 70%
+      );
+      -webkit-mask: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.03) 0%,
+        rgba(0, 0, 0, 0) 70%
+      );
     }
   }
 </style>
